fix text overflow ellipsis

--- a/src/app/components/product-item/product-item.style.scss
+++ b/src/app/components/product-item/product-item.style.scss
@@ -18,6 +18,14 @@
     cursor: pointer;
     box-shadow: 2px 2px 5px 0px black;
   }
+
+  .btitle {
+    .creator {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
 }
 
 .name {
